--- a/index.html
+++ b/index.html
@@ -5,10 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>Document</title> 
+    <title>문자빨리</title> 
     <link rel="stylesheet" href="css/import.css">
 </head>
 <body>
-    
+    <div class="mainPage">
+        <header class="active">
+            <h1><a href="index.html">문자빨리</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="">서비스</a></li>
+                    <li><a href="">API 연동</a></li>
+                    <li><a href="">고객센터</a></li>
+                </ul>
+            </nav>
+            <div>
+                <a href="">로그인</a>
+                <a href="">회원가입</a>
+            </div>
+        </header>
+        <section>
+            <h2>
+                국내 최저가 비즈니스 문자
+                <img src="images/logo.png" alt="문자빨리">
+            </h2>
+            <p>
+                세상에서 가장 빠른 문자발송 서비스
+                지금 서비스를 이용해보세요!
+            </p>
+            <div>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+            <img src="images/main-img.png" alt="">
+        </section>
+
+        <section>
+            <h2>문자 한번 보내보시겠어요?</h2>
+        </section>
+
+        <section>
+            <h2>공지사항</h2>
+            <ul>
+                <li>
+                    <a href="#">
+                        <strong></strong>
+                        <time></time>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>이벤트</h2>
+        </section>
+    </div>    
 </body>
 </html>
