메인 페이지 완료

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mainPage">
         <header class="active">
-            <h1><a href="index.html">문자빨리</a></h1>
+            <h1><a href="index.html" class="imgBox">문자빨리</a></h1>
             <nav>
                 <ul>
                     <li><a href="">서비스</a></li>
@@ -24,7 +24,8 @@
                 <a href="">회원가입</a>
             </div>
         </header>
-        <section>
+
+        <div class="topArea">
             <h2>
                 국내 최저가 비즈니스 문자
                 <img src="images/logo.png" alt="문자빨리">
@@ -34,31 +35,99 @@
                 지금 서비스를 이용해보세요!
             </p>
             <div>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="">시작하기</a>
+                <a href="">로그인</a>
             </div>
             <img src="images/main-img.png" alt="">
+        </div>
+
+        <section class="contentSize">
+            <h2 class="title01">문자 한번 보내보시겠어요?</h2>
         </section>
 
-        <section>
-            <h2>문자 한번 보내보시겠어요?</h2>
-        </section>
-
-        <section>
-            <h2>공지사항</h2>
+        <section class="noticeArea contentSize">
+            <h2 class="title01">공지사항</h2>
             <ul>
                 <li>
                     <a href="#">
-                        <strong></strong>
-                        <time></time>
+                        <strong>비밀번호 변경 진행 요청</strong>
+                        <time>2023.02.02</time>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <strong>
+                            영리 목적의 ‘마케팅성 광고 메시
+                            지’ 알림톡 위반 사례 안내
+                        </strong>
+                        <time>2023.02.02</time>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <strong>발신번호 사전등록 절차 변경 안내</strong>
+                        <time>2023.02.02</time>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <strong>변경 및 일시정지/ 해지 신청서</strong>
+                        <time>2023.02.02</time>
                     </a>
                 </li>
             </ul>
+            <a href="#">더보기</a>
         </section>
 
-        <section>
-            <h2>이벤트</h2>
+        <section class="eventArea contentSize">
+            <h2 class="title01">이벤트</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <div class="imgBox" style="background-image: url('https://via.placeholder.com/370x260');">이벤트 이미지</div>
+                        <strong>기간 약정 할인 받고 회원가입 하자!</strong>
+                        <time>2023.01.23 - 2023.03.02</time>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="imgBox" style="background-image: url('https://via.placeholder.com/370x260');">이벤트 이미지</div>
+                        <strong>2023 문자빨리 고객대상 설문조사 이벤트</strong>
+                        <time>2023.01.23 - 2023.03.02</time>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="imgBox" style="background-image: url('https://via.placeholder.com/370x260');">이벤트 이미지</div>
+                        <strong>기간 약정 할인 받고 회원가입 하자!</strong>
+                        <time>2023.01.23 - 2023.03.02</time>
+                    </a>
+                </li>
+            </ul>
+            <a href="#">더보기</a>
         </section>
+
+        <footer>
+            <div class="contentSize">
+                <ul>
+                    <li><a href="">이용약관</a></li>
+                    <li><a href="">개인정보처리방침</a></li>
+                </ul>
+                <h2><img src="images/logo-color.png" alt="문자빨리"></h2>
+                <address>
+                    <p>소프트웨어 및 공급업 (주)스마트퓨쳐</p>
+                    <p>대표자 홍운기</p>
+                    <p>사업자등록번호 개발 616-86-29368</p>
+                    <p>주소 서울특별시 서초구 강남대로 275, 8층 (서초동, 강남메인타워)</p>
+                    <p>대표번호 070-7703-6553</p>
+                    <p>팩스번호 02-521-7526</p>
+                </address>
+                <div>
+                    <p>기업 맞춤형 서비스를 제공합니다.</p>
+                    <a href="">기억회원 문의하기</a>
+                </div>
+            </div>
+        </footer>
     </div>    
 </body>
 </html>
