--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1><a href="index.html" class="imgBox">문자빨리</a></h1>
             <nav>
                 <ul>
-                    <li><a href="">서비스</a></li>
+                    <li><a href="service.html">서비스</a></li>
                     <li><a href="">API 연동</a></li>
                     <li><a href="">고객센터</a></li>
                 </ul>
