--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>문자빨리</title> 
+    <title>서비스 - 문자빨리</title> 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- swiper -->
@@ -24,7 +24,7 @@
                 <ul>
                     <li class="active"><a href="service.html">서비스</a></li>
                     <li><a href="">API 연동</a></li>
-                    <li><a href="">고객센터</a></li>
+                    <li><a href="notice.html">고객센터</a></li>
                 </ul>
             </nav>
             <div>
