--- a/notice.html
+++ b/notice.html
@@ -33,13 +33,13 @@
         <section class="noticePage contentSize">
             <h2 class="title01">고객센터</h2>
             <ul class="subMenu">
-                <li class="active"><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
+                <li class="active"><a href="notice.html">공지사항</a></li>
+                <li><a href="event.html">이벤트</a></li>
                 <li><a href="">상담문의</a></li>
             </ul>
             <ul class="boardArea">
                 <li>
-                    <a href="">
+                    <a href="detail.html">
                         <span>500</span>
                         <p>[공지] 서비스 작업 안내 (1/23)</p>
                         <time>2023.01.02</time>
