고객센터 이벤트 페이지 완료

--- a/event.html
+++ b/event.html
@@ -43,6 +43,15 @@
                         <p>2023년 1월 단문 최저가 이벤트</p>
                         <time>2023.01.02 - 2023.03.02</time>
                     </a>
+                    <div class="editor">
+                        내용
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        <p>2023년 1월 단문 최저가 이벤트</p>
+                        <time>2023.01.02 - 2023.03.02</time>
+                    </a>
                 </li>
             </ul>
             <div class="pagerArea">
