상담 문의 페이지 임시완료

--- a/detail.html
+++ b/detail.html
@@ -38,7 +38,7 @@
             <ul class="subMenu">
                 <li class="active"><a href="notice.html">공지사항</a></li>
                 <li><a href="event.html">이벤트</a></li>
-                <li><a href="">상담문의</a></li>
+                <li><a href="inquiry.html">상담문의</a></li>
             </ul>
 
             <h3>
@@ -51,7 +51,7 @@
             <div class="linkArea">
                 <a href="">이전</a>
                 <a href="">다음</a>
-                <a href="">목록</a>
+                <a href="notice.html">목록</a>
             </div>
             <ul class="boardArea">
                 <li>
