--- a/notice.html
+++ b/notice.html
@@ -35,7 +35,7 @@
             <ul class="subMenu">
                 <li class="active"><a href="notice.html">공지사항</a></li>
                 <li><a href="event.html">이벤트</a></li>
-                <li><a href="">상담문의</a></li>
+                <li><a href="inquiry.html">상담문의</a></li>
             </ul>
             <ul class="boardArea">
                 <li>
