로그인 페이지 완료

--- a/inquiry.html
+++ b/inquiry.html
@@ -25,12 +25,12 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그인</a>
+                <a href="signIn.html">로그인</a>
                 <a href="">회원가입</a>
             </div>
         </header>
 
-        <section class="eventPage contentSize">
+        <section class="inquiryPage contentSize">
             <h2 class="title01">고객센터</h2>
             <ul class="subMenu">
                 <li><a href="notice.html">공지사항</a></li>
@@ -38,7 +38,7 @@
                 <li class="active"><a href="inquiry.html">상담문의</a></li>
             </ul>
             <form>
-                <fieldset>
+                <fieldset class="width680">
                     <ul>
                         <li class="half">
                             <label for="">이름(회사명)</label>
@@ -83,6 +83,7 @@
                             <div class="privacyArea"></div>
                         </li>
                     </ul>
+                    <input type="submit" value="문의 등록" class="btn-color">
                 </fieldset>
             </form>
         </section>
