--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <div>
-                <a href="">로그인</a>
+                <a href="signIn.html">로그인</a>
                 <a href="">회원가입</a>
             </div>
         </header>
