--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>로그인 - 문자빨리</title> 
+    <title>회원가입 - 문자빨리</title> 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- css -->
@@ -30,35 +30,19 @@
             </div>
         </header>
 
-        <section class="singInPage contentSize">
-            <h2 class="title01">로그인</h2>
-            <p>
-                국내 최저가 비즈니스 문자<br>
-                문자빨리에 오신 것을 환영합니다.
-            </p>
-            <form>
-                <fieldset class="width400">
-                    <ul>
-                        <li>
-                            <div>
-                                <input type="text" placeholder="아이디를 입력하세요">
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <input type="text" placeholder="비밀번호를 입력하세요">
-                            </div>
-                        </li>
-                    </ul>
-                    <input type="checkbox" id="IDSave"><label for="IDSave">아이디 저장</label>
-                    <input type="submit" value="로그인" class="btn-color">
-                </fieldset>
-            </form>
-            <div class="linkArea">
-                <a href="">아이디찾기</a>
-                <a href="">비밀번호 재설정</a>
-            </div>
-            <a href="" class="btn-border width400">회원가입</a>
+        <section class="singUpPage contentSize">
+            <h2 class="title01">회원가입</h2>
+            <p>어떤 회원으로 가입하시겠습니까?</p>
+            <ul class="contentSize">
+                <li>
+                    <strong>개인 회원</strong>
+                    <a href="" class="btn-color">개인회원 가입하기</a>
+                </li>
+                <li>
+                    <strong>기업 회원</strong>
+                    <a href="" class="btn-color">기업회원 가입하기</a>
+                </li>
+            </ul>
         </section>
 
         <footer>
