이용약관 페이지 완료

--- a/event.html
+++ b/event.html
@@ -37,15 +37,12 @@
                 <li class="active"><a href="event.html">이벤트</a></li>
                 <li><a href="inquiry.html">상담문의</a></li>
             </ul>
-            <ul class="boardArea">
+            <ul class="boardBox-drop">
                 <li>
                     <a href="">
                         <p>2023년 1월 단문 최저가 이벤트</p>
                         <time>2023.01.02 - 2023.03.02</time>
                     </a>
-                    <div class="editor">
-                        내용
-                    </div>
                 </li>
                 <li>
                     <a href="">
