--- a/notice.html
+++ b/notice.html
@@ -37,7 +37,7 @@
                 <li><a href="event.html">이벤트</a></li>
                 <li><a href="inquiry.html">상담문의</a></li>
             </ul>
-            <ul class="boardArea">
+            <ul class="boardBox">
                 <li>
                     <a href="detail.html">
                         <span>500</span>
