--- a/signIn.html
+++ b/signIn.html
@@ -38,7 +38,7 @@
             </p>
             <form>
                 <fieldset class="width400">
-                    <ul>
+                    <ul class="inputBox">
                         <li>
                             <div>
                                 <input type="text" placeholder="아이디를 입력하세요">
