--- a/signUp-input-enterprise.html
+++ b/signUp-input-enterprise.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- Iphone 모바일 확대 방지  maximum-scale=1.0, user-scalable=0-->
-    <title>개인 회원 - 회원가입 - 문자빨리</title> 
+    <title>기업 회원 - 회원가입 - 문자빨리</title> 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- css -->
@@ -62,6 +62,12 @@
                             </div>
                         </li>
                         <li>
+                            <label for="">담당자 설명</label>
+                            <div>
+                                <input type="text">
+                            </div>
+                        </li>
+                        <li>
                             <label for="">이메일 주소</label>
                             <div>
                                 <input type="text">
@@ -72,6 +78,19 @@
                                     <option></option>
                                     <option></option>
                                 </select>
+                            </div>
+                        </li>
+                        <li class="half">
+                            <label for="">업체명</label>
+                            <div>
+                                <input type="text">
+                            </div>
+                        </li>
+                        <li class="half">
+                            <label for="">업체 발신번호</label>
+                            <div>
+                                <input type="text">
+                                <mark class="error">수정불가</mark>
                             </div>
                         </li>
                         <li>
